--- a/terraform/variables.tf.jinja
+++ b/terraform/variables.tf.jinja
@@ -6,8 +6,8 @@ variable "server" {
     name        = {{server_name}}
     server_type = {{server_type}}
     image       = {{server_image}}
-    location    = {{server-location}}
-    backups     = {{server-backup}}
+    location    = {{server_location}}
+    backups     = {{server_backup}}
     user = "deploy_user"
   }
 }
