--- a/terraform/variables.tf.jinja
+++ b/terraform/variables.tf.jinja
@@ -7,7 +7,7 @@ variable "server" {
     server_type = "{{server_type}}"
     image       = "{{server_image}}"
     location    = "{{server_location}}"
-    backups     = "{{server_backup}}"
+    backups     = "{% if server_backup } true {% else %} false {% endif %}"
     user = "deploy_user"
   }
 }
